# PRG_evidence

./: .gitignore  CMakeLists.txt  README.md  output
data/activity/: data_1.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt
data/clusters/: clusters_0.txt  clusters_1.txt  clusters_2.txt  clusters_3.txt  clusters_4.txt  clusters_5.txt  clusters_6.txt
data/evidence/: evidence_0.txt  evidence_1.txt  evidence_2.txt  evidence_3.txt  evidence_4.txt  evidence_5.txt  evidence_6.txt
data/merged_evidences/: merged_evidences_0.txt  merged_evidences_1.txt  merged_evidences_2.txt  merged_evidences_3.txt  merged_evidences_4.txt  merged_evidences_5.txt  merged_evidences_6.txt
data/pairs/: pairs_0.txt  pairs_1.txt  pairs_2.txt  pairs_3.txt  pairs_4.txt  pairs_5.txt  pairs_6.txt
include/: coarse_grain.h  constants.h  file_io.h  helper_functions.h  pairwise_evidence.h  sample_binary_vars.h
src/: coarse_grain.cpp  file_io.cpp  helper_functions.cpp  main.cpp  pairwise_evidence.cpp  sample_binary_vars.cpp  timer.cpp
